# rbe2002-picow

./: README.md  build.sh
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  shell.sh  start.sh  stop.sh
garbage-report/: CMakeLists.txt  main.c
garbage-report/i2c/: CMakeLists.txt  i2c.c  i2c.h
garbage-report/wireless/: CMakeLists.txt  wireless.c  wireless.h
garbage-report/wireless/dhcpserver/: dhcpserver.c
i2c-test/: CMakeLists.txt  main.c
i2c-test/i2c/: i2c.c  i2c.h
i2c-test/wireless/: wireless.c
i2c-test/wireless/dhcpserver/: LICENSE
wireless-test/: CMakeLists.txt  lwipopts.h  main.c
